--- a/Treasure hunt/.project
+++ b/Treasure hunt/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Slayder</name>
+	<name>Treasure hunt</name>
 	<comment></comment>
 	<projects>
 	</projects>
